--- a/VayBe/users/templates/users/snippets/dashboard-block.html
+++ b/VayBe/users/templates/users/snippets/dashboard-block.html
@@ -1,7 +1,13 @@
 <!-- templates/users/snippets/dashboard-block.html -->
-
 <div class="{{ container_class }}">
-  <div class="dashboard-block-icon text-black">{{ block.icon|safe }}</div>
-  <div class="dashboard-block-titel">{{ block.title }}</div>
-  <div class="dashboard-block-description">{{ block.description }}</div>
+  <div class="dashboard-block-icon text-black">
+    <div class="icon">{{ block.icon|safe }}</div>
+  </div>
+  <div class="dashboard-block-texts">
+    <div class="dashboard-block-title fw-bold h4 text-black">{{ block.title }}</div>
+    <div class="dashboard-block-description text-body">{{ block.description }}</div>
+  </div>
+  {% if block.route_name %}
+    <a class="block-link" href="{% url block.route_name %}"></a>
+  {% endif %}
 </div>
