--- a/VayBe/v_utilities/templates/v_utilities/dashboard-table.html
+++ b/VayBe/v_utilities/templates/v_utilities/dashboard-table.html
@@ -38,6 +38,7 @@
         </div>
       </div>
       <div id="v-table-container" class="container dashboard-table" data-settings="{{ jsonSettings }}" data-source-url="{{ data_source }}" data-csrf-token="{{ csrf_token }}">
+        {% block content_table %}
         <table class="w-100 mb-1 custom-table table">
           <thead>
             <tr class="bg-dark">
@@ -47,6 +48,7 @@
             </tr>
           </thead>
         </table>
+        {% endblock %}
         <div class="table-placeholder placeholder-wave">
           <div class="placeholder mb-1 placeholder-lg"></div>
           <div class="placeholder mb-1 placeholder-lg"></div>
