ajout de l'access aux course avec l'id

--- a/VayBe/scheduling/templates/scheduling/manage_schedules.html
+++ b/VayBe/scheduling/templates/scheduling/manage_schedules.html
@@ -17,6 +17,6 @@
 {% endblock %}
 
 {% block content_table %}
-    <div id="app" data-url-get-schedules="{% url 'view_schedules'%}" data-course-url="course-manager/course/<int:year>/<str:code_ue>">
+    <div id="app" data-url-get-schedules="{% url 'view_schedules'%}" data-course-url="/course-manager/course/[id]">
     </div>
 {% endblock %}
