--- a/VayBe/scheduling/templates/scheduling/manage_schedules.html
+++ b/VayBe/scheduling/templates/scheduling/manage_schedules.html
@@ -2,24 +2,25 @@
 
 {% load static %}
 
-{% block header %}{% endblock %}
+{% block header %}
+
+{% endblock %}
 
 {% block bottom %}
-    <script src="{% static 'scheduling/schedule-manager.js' %}"></script>
+  <script src="{% static 'scheduling/schedule-manager.js' %}"></script>
 {% endblock %}
 
 {% block pageTitle %}
   <div class="title-section bg-black d-flex justify-content-center py-4">
     <div>
-      <h1 class="text-center text-uppercase text-white fw-bold mb-0"> Scheduling</h1>
+      <h1 class="text-center text-uppercase text-white fw-bold mb-0">{{ title|default:'Scheduling' }}</h1>
     </div>
   </div>
 {% endblock %}
-          {% block banner_label %}
-  Your schedules
-{%  endblock %}
+{% block banner_label %}
+  {{ banner_title|default:'Your schedules' }}
+{% endblock %}
 
 {% block content_table %}
-    <div id="app" data-url-get-schedules="{{url}}"  data-csrf-token="{{ csrf_token }}" data-course-url="/course-manager/course/[id]">
-    </div>
+  <div id="app" data-url-get-schedules="{% url 'view_schedules' %}" data-csrf-token="{{ csrf_token }}" data-course-url="/course-manager/course/[id]"></div>
 {% endblock %}
