--- a/VayBe/users/templates/users/login.html
+++ b/VayBe/users/templates/users/login.html
@@ -8,6 +8,7 @@
 {% endblock %}
 
 {% block header %}
+  {{ block.super }}
   <link rel="stylesheet" href="{% static 'users/css/login.css' %}" />
 {% endblock %}
 
