--- a/VayBe/users/templates/users/dashboard.html
+++ b/VayBe/users/templates/users/dashboard.html
@@ -5,11 +5,12 @@
 {% endblock %}
 
 {% block header %}
+  {{ block.super }}
   <link rel="stylesheet" href="{% static 'users/css/dashboard.css' %}" />
 {% endblock %}
 
 {% block bottom %}
-
+  {{ block.super }}
 {% endblock %}
 
 {% block content_class %}
@@ -30,9 +31,9 @@
       <div class="body-header space-padding bg-white d-flex justify-content-center">
         <div class="dashboard-user-info space-inner-px w-auto">
           <h2 class="dashboad-studentinfo-section-title fw-bolder text-black text-uppercase double-dots-title dot-center text-center circle left primary mb-5">
-          {% block banner_label %}
-          Your infos
-          {% endblock %}
+            {% block banner_label %}
+              Your infos
+            {% endblock %}
           </h2>
           <table class="table table-borderless">
             <tbody>
