--- a/VayBe/users/templates/users/snippets/dashboard-block.html
+++ b/VayBe/users/templates/users/snippets/dashboard-block.html
@@ -1,5 +1,5 @@
 <!-- templates/users/snippets/dashboard-block.html -->
-<div class="{{ container_class }}">
+<div class="{{ container_class }} mb-5">
   <div class="dashboard-block-icon text-black">
     <div class="icon">{{ block.icon|safe }}</div>
   </div>
